--- a/backend/services/job-service/package.json
+++ b/backend/services/job-service/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@jobgraph/common": "*",
-    "express": "^4.18.0",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "dotenv": "^16.3.0"
+    "dotenv": "^16.3.0",
+    "express": "^4.18.0",
+    "helmet": "^7.0.0"
   }
 }
