--- a/backend/package.json
+++ b/backend/package.json
@@ -24,17 +24,20 @@
     "migrate:create": "node-pg-migrate create"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.50.0",
-    "prettier": "^3.0.0",
-    "typescript": "^5.2.0",
-    "ts-node": "^10.9.0",
-    "nodemon": "^3.0.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.0",
+    "node-pg-migrate": "^6.2.2",
+    "nodemon": "^3.0.0",
+    "prettier": "^3.0.0",
     "ts-jest": "^29.1.0",
-    "node-pg-migrate": "^6.2.2"
+    "ts-node": "^10.9.0",
+    "typescript": "^5.2.0"
+  },
+  "dependencies": {
+    "@anthropic-ai/sdk": "^0.68.0"
   }
 }
