--- a/backend/services/profile-service/package.json
+++ b/backend/services/profile-service/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@jobgraph/common": "*",
-    "express": "^4.18.2",
+    "@types/multer": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "dotenv": "^16.3.1"
+    "mammoth": "^1.11.0",
+    "multer": "^2.0.2",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
