--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.50.0",
@@ -33,6 +34,7 @@
     "node-pg-migrate": "^6.2.2",
     "nodemon": "^3.0.0",
     "prettier": "^3.0.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.0",
     "typescript": "^5.2.0"
